--- a/index.html
+++ b/index.html
@@ -149,11 +149,24 @@
                     </ul>
                 </div>
             </section>
+            <section>
+                <div class="container">
+                    <h2 class="section-title">Постоянные клиенты</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
         </main>
 <!-- Подвал -->
     <footer class="footer ">
-        <div class="container kik">
-                <div class="salam">
+        <div class="container decoration">
+                <div>
                     <a href="#" lang="en" class="footer-logo"><span class="name_logo">Web</span>Studio</a>
 
                     <address>
@@ -164,8 +177,8 @@
                         </ul>
                     </address>
                 </div>
-            <div class="fafa">
-                <h3 class="social-footer-title">Присоеденяйтесь</h3>
+            <div class="social-footer">
+                <h3 class="social-footer-title">присоединяйтесь</h3>
                 <ul class="social-footer-block">
                     <li class="social-footer-list"><a href="" class="social-footer-instagram"></a></li>
                     <li class="social-footer-list"><a href="" class="social-footer-twitter"></a></li>
