--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
                     </ul>             
                 </nav>
                 <ul class="cont-nav list">
-                    <li class="item-site-nav"><a href="mailto:info@devstudio.com" class="cont-link">info@devstudio.com</a></li>
-                    <li class="item-site-nav"><a href="tel:+380961111111" class="cont-link">+380961111111</a></li>
+                    <li class="item-site-nav"><a href="mailto:info@devstudio.com" class="cont-link mail">info@devstudio.com</a></li>
+                    <li class="item-site-nav"><a href="tel:+380961111111" class="cont-link telephone">+380961111111</a></li>
                 </ul>
             </div>   
         </div>
@@ -147,16 +147,27 @@
 
     <!-- Подвал -->
     <footer class="footer">
-        <div class="container">
-            <a href="" class="footer-logo"><span class="name_logo">Web</span>Studio</a>
+        <div class="container decoration">
+                <div>
+                    <a href="#" lang="en" class="footer-logo"><span class="name_logo">Web</span>Studio</a>
 
-            <address>
-                <p class="cont-footer">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="list"> 
-                    <li class="address-mail"><a href="mailto:info@example.com" class="footer-list">info@example.com</a></li>
-                    <li class="address-tel"><a href="tel:+380961111111" class="footer-list">+38099 111 11 11</a></li>
+                    <address>
+                        <p class="cont-footer">г. Киев, пр-т Леси Украинки, 26</p>
+                        <ul class="list"> 
+                            <li class="address-mail"><a href="mailto:info@example.com" class="footer-list">info@example.com</a></li>
+                            <li class="address-tel"><a href="tel:+380961111111" class="footer-list">+38099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+            <div class="social-footer">
+                <h3 class="social-footer-title">присоединяйтесь</h3>
+                <ul class="social-footer-block">
+                    <li class="social-footer-list"><a href="" class="social-footer-instagram"></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-twitter"></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-facebook"></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-linkedin"></a></li>
                 </ul>
-            </address>
+            </div> 
         </div>
     </footer>
 </body>
