--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
                     </ul>             
                 </nav>
                 <ul class="cont-nav list">
-                    <li class="item-site-nav "><a href="mailto:info@devstudio.com" class="cont-link mail">info@devstudio.com</a></li>
-                    <li class="item-site-nav "><a href="tel:+380961111111" class="cont-link telephone">+380961111111</a></li>
+                    <li class="item-site-nav ">
+                            
+                        <a href="mailto:info@devstudio.com" class="cont-link mail hover">
+                            <svg class="contact-item" width="16px" height="12px">
+                                <use href="./images/symbol.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a></li>
+                    <li class="item-site-nav "><a href="tel:+380961111111" class="cont-link telephone">
+                            <svg class="contact-item" width="16px" height="12px">
+                                <use href="./images/symbol.svg#icon-telephone"></use>
+                            </svg>+380961111111</a></li>
                 </ul>
             </div>    
         </div>
@@ -45,22 +53,42 @@
                 <div class="container">
                     <h2 class="features-title visual-hidden">Особенности</h2>
                     <ul class="features list">                    
-                        <li class="features-list antena">
+                        <li class="features-list">
+                            <div class="icon">
+                                <svg class="features-icon" width="70px" height="70px">
+                                    <use href="./images/symbol.svg#icon-antenna"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Внимание к деталям</h3>
                             <p class="text-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
 
                         <li class="features-list clock">
+                            <div class="icon">
+                                <svg class="features-icon" width="70px" height="70px">
+                                    <use href= "./images/symbol.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Пунктуальность</h3>
                             <p class="text-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
 
                         <li class="features-list diagram">
+                             <div class="icon">
+                                <svg class="features-icon" width="70px" height="70px">
+                                    <use href="./images/symbol.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Планирование</h3>
                             <p class="text-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
 
                         <li class="features-list astronaut">
+                             <div class="icon">
+                                <svg class="features-icon" width="70px" height="70px">
+                                    <use href="./images/symbol.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Современные технологии</h3>
                             <p class="text-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -98,10 +126,25 @@
                                 <h3 class="title">Игорь Демьяненко</h3>
                                 <p lang="en" class="position-title">Product Designer</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram"></a></li>
-                                    <li class="social-list"><a href="" class="social-twitter"></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook"></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin"></a></li>
+                                    <li class="social-list"><a href="" class="social-instagram">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-list"><a href="" class="social-twitter">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-facebook"><svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-linkedin"><svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg></a></li>
                             </ul>
                             </div>  
   
@@ -112,10 +155,25 @@
                                 <h3 class="title">Ольга Репина</h3>
                                 <p lang="en" class="position-title">Frontend Developer</p>
                             <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram"></a></li>
-                                    <li class="social-list"><a href="" class="social-twitter"></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook"></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin"></a></li>
+                                    <li class="social-list"><a href="" class="social-instagram">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-list"><a href="" class="social-twitter">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-facebook"><svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-linkedin"><svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg></a></li>
                             </ul>
                             </div>
                         </li>
@@ -125,10 +183,27 @@
                                 <h3 class="title">Николай Тарасов</h3>
                                 <p lang="en" class="position-title">Marketing</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram"></a></li>
-                                    <li class="social-list"><a href="" class="social-twitter"></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook"></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin"></a></li>
+                                    <li class="social-list"><a href="" class="social-instagram">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-list"><a href="" class="social-twitter">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-facebook">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-linkedin">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg></a></li>
                                 </ul>
                             </div>    
                         </li>
@@ -138,10 +213,27 @@
                                 <h3 class="title">Михаил Ермаков</h3>
                                 <p lang="en" class="position-title">UI Designer</p>
                                 <ul class="social-block">
-                                        <li class="social-list"><a href="" class="social-instagram"></a></li>
-                                        <li class="social-list"><a href="" class="social-twitter"></a></li>
-                                        <li class="social-list"><a href="" class="social-facebook"></a></li>
-                                        <li class="social-list"><a href="" class="social-linkedin"></a></li>
+                                    <li class="social-list"><a href="" class="social-instagram">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a></li>
+                                    <li class="social-list"><a href="" class="social-twitter">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-facebook">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg></a></li>
+                                    <li class="social-list"><a href="" class="social-linkedin">
+                                        <svg class="social-link" width="20" height="20">
+                                            <use href="./images/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg></a></li>
                                 </ul>
                             </div>
 
@@ -149,16 +241,48 @@
                     </ul>
                 </div>
             </section>
-            <section>
+            <section class="section-clients">
                 <div class="container">
                     <h2 class="section-title">Постоянные клиенты</h2>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                    <ul class="clients-block">
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-1">
+
+                                </use>
+                            </svg>
+                        </a></li>
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-2">
+
+                                </use>
+                            </svg>
+                        </a></li>
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-3">
+
+                                </use>
+                            </svg></a></li>
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-4">
+
+                                </use>
+                            </svg></a></li>
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-5">
+
+                                </use>
+                            </svg></a></li>
+                        <li class="clients-list"><a href="" class="clients-link">
+                            <svg class="client-one" width="106" height="60">
+                                <use href="./images/symbol.svg#icon-client-6">
+
+                                </use>
+                            </svg></a></li>
                     </ul>
                 </div>
             </section>
@@ -180,10 +304,24 @@
             <div class="social-footer">
                 <h3 class="social-footer-title">присоединяйтесь</h3>
                 <ul class="social-footer-block">
-                    <li class="social-footer-list"><a href="" class="social-footer-instagram"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-twitter"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-facebook"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-linkedin"></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-instagram"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-instagram">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-twitter"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-twitter">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-facebook"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-facebook">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-linkedin">
+                        <svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-linkedin">
+                            </use>
+                        </svg>
+                    </a></li>
                 </ul>
             </div> 
         </div>
