--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,17 @@
                     </ul>             
                 </nav>
                 <ul class="cont-nav list">
-                    <li class="item-site-nav"><a href="mailto:info@devstudio.com" class="cont-link mail">info@devstudio.com</a></li>
-                    <li class="item-site-nav"><a href="tel:+380961111111" class="cont-link telephone">+380961111111</a></li>
+                    <li class="item-site-nav ">
+                            
+                        <a href="mailto:info@devstudio.com" class="cont-link mail hover">
+                            <svg class="contact-item" width="16px" height="12px">
+                                <use href="./images/symbol.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a></li>
+                    <li class="item-site-nav "><a href="tel:+380961111111" class="cont-link telephone">
+                            <svg class="contact-item" width="16px" height="12px">
+                                <use href="./images/symbol.svg#icon-telephone"></use>
+                            </svg>+380961111111</a></li>
                 </ul>
-            </div>   
         </div>
     </header>
 
@@ -162,10 +169,24 @@
             <div class="social-footer">
                 <h3 class="social-footer-title">присоединяйтесь</h3>
                 <ul class="social-footer-block">
-                    <li class="social-footer-list"><a href="" class="social-footer-instagram"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-twitter"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-facebook"></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-linkedin"></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-instagram"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-instagram">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-twitter"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-twitter">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-facebook"><svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-facebook">
+                            </use>
+                        </svg></a></li>
+                    <li class="social-footer-list"><a href="" class="social-footer-linkedin">
+                        <svg class="social-footer-link" width="20" height="20">
+                            <use href="./images/symbol.svg#icon-linkedin">
+                            </use>
+                        </svg>
+                    </a></li>
                 </ul>
             </div> 
         </div>
