--- a/index.html
+++ b/index.html
@@ -183,23 +183,23 @@
                                 <h3 class="title">Николай Тарасов</h3>
                                 <p lang="en" class="position-title">Marketing</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram">
+                                    <li class="social-list"><a href="" class="">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-instagram">
                                             </use>
                                         </svg>
                                     </a></li>
-                                    <li class="social-list"><a href="" class="social-twitter">
+                                    <li class="social-list"><a href="" class="">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-twitter">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook">
+                                    <li class="social-list"><a href="" class="">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-facebook">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin">
+                                    <li class="social-list"><a href="" class="">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-linkedin">
                                             </use>
