--- a/index.html
+++ b/index.html
@@ -126,22 +126,22 @@
                                 <h3 class="title">Игорь Демьяненко</h3>
                                 <p lang="en" class="position-title">Product Designer</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-instagram">
                                             </use>
                                         </svg>
                                     </a></li>
-                                    <li class="social-list"><a href="" class="social-twitter">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-twitter">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook"><svg class="social-link" width="20" height="20">
+                                    <li class="social-list"><a href="" class="soc"><svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-facebook">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin"><svg class="social-link" width="20" height="20">
+                                    <li class="social-list"><a href="" class="soc"><svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-linkedin">
                                             </use>
                                         </svg></a></li>
@@ -155,22 +155,22 @@
                                 <h3 class="title">Ольга Репина</h3>
                                 <p lang="en" class="position-title">Frontend Developer</p>
                             <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-instagram">
                                             </use>
                                         </svg>
                                     </a></li>
-                                    <li class="social-list"><a href="" class="social-twitter">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-twitter">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook"><svg class="social-link" width="20" height="20">
+                                    <li class="social-list"><a href="" class="soc"><svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-facebook">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin"><svg class="social-link" width="20" height="20">
+                                    <li class="social-list"><a href="" class="soc"><svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-linkedin">
                                             </use>
                                         </svg></a></li>
@@ -183,23 +183,23 @@
                                 <h3 class="title">Николай Тарасов</h3>
                                 <p lang="en" class="position-title">Marketing</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-instagram">
                                             </use>
                                         </svg>
                                     </a></li>
-                                    <li class="social-list"><a href="" class="">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-twitter">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-facebook">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-linkedin">
                                             </use>
@@ -213,23 +213,23 @@
                                 <h3 class="title">Михаил Ермаков</h3>
                                 <p lang="en" class="position-title">UI Designer</p>
                                 <ul class="social-block">
-                                    <li class="social-list"><a href="" class="social-instagram">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-instagram">
                                             </use>
                                         </svg>
                                     </a></li>
-                                    <li class="social-list"><a href="" class="social-twitter">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-twitter">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-facebook">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-facebook">
                                             </use>
                                         </svg></a></li>
-                                    <li class="social-list"><a href="" class="social-linkedin">
+                                    <li class="social-list"><a href="" class="soc">
                                         <svg class="social-link" width="20" height="20">
                                             <use href="./images/symbol.svg#icon-linkedin">
                                             </use>
@@ -304,19 +304,26 @@
             <div class="social-footer">
                 <h3 class="social-footer-title">присоединяйтесь</h3>
                 <ul class="social-footer-block">
-                    <li class="social-footer-list"><a href="" class="social-footer-instagram"><svg class="social-footer-link" width="20" height="20">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-instagram">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-twitter"><svg class="social-footer-link" width="20" height="20">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-twitter">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-facebook"><svg class="social-footer-link" width="20" height="20">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-facebook">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-linkedin">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
                         <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-linkedin">
                             </use>
