--- a/portfolio.html
+++ b/portfolio.html
@@ -168,20 +168,27 @@
                 </div>
             <div class="social-footer">
                 <h3 class="social-footer-title">присоединяйтесь</h3>
-                <ul class="social-footer-block">
-                    <li class="social-footer-list"><a href="" class="social-footer-instagram"><svg class="social-footer-link" width="20" height="20">
+                 <ul class="social-footer-block">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-instagram">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-twitter"><svg class="social-footer-link" width="20" height="20">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-twitter">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-facebook"><svg class="social-footer-link" width="20" height="20">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
+                        <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-facebook">
                             </use>
                         </svg></a></li>
-                    <li class="social-footer-list"><a href="" class="social-footer-linkedin">
+
+                    <li class="social-footer-list"><a href="" class="soc-footer">
                         <svg class="social-footer-link" width="20" height="20">
                             <use href="./images/symbol.svg#icon-linkedin">
                             </use>
