--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </address>
                 </div>
             <div class="social-footer">
-                <h3 class="social-footer-title">присоединяйтесь</h3>
+                <p class="social-footer-title">присоединяйтесь</p>
                 <ul class="social-footer-block">
 
                     <li class="social-footer-list"><a href="" class="soc-footer">
